@@ -5,6 +5,10 @@ cupt (1.3.0) UNRELEASED; urgency=low
       - BinaryVersion:
         - Rewritten parsing the version entry using different approach.
           Speeded up parsing significantly.
+    - System:
+      - Resolvers/Native:
+        - Don't pre-schedule any relations for newly-installed versions, leave
+          all work to main resolver.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 30 Oct 2009 13:54:43 +0200
 
